Add Export/Import buttons for cross-device library sync

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         </header>
 
         <div class="controls">
+            <button id="exportBtn" class="btn btn-secondary" title="Export library to file">📥 Export</button>
+            <button id="importBtn" class="btn btn-secondary" title="Import library from file">📤 Import</button>
+            <input type="file" id="importFile" accept=".json" style="display: none;">
             <button id="addBookBtn" class="btn btn-primary">+ Add Material</button>
             <div class="filters">
                 <select id="categoryFilter">
