FIX: Make import work on iPad with label and add paste alternative

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
         <div class="controls">
             <button id="exportBtn" class="btn btn-secondary" title="Export library to file">📥 Export</button>
-            <button id="importBtn" class="btn btn-secondary" title="Import library from file">📤 Import</button>
-            <input type="file" id="importFile" accept=".json" style="display: none;">
+            <label for="importFile" class="btn btn-secondary" style="cursor: pointer; margin: 0;">📤 Import File</label>
+            <input type="file" id="importFile" accept=".json,.txt,application/json" style="display: none;">
+            <button id="pasteImportBtn" class="btn btn-secondary" title="Paste data to import">📋 Paste Data</button>
             <button id="addBookBtn" class="btn btn-primary">+ Add Material</button>
             <div class="filters">
                 <select id="categoryFilter">
