Update library name to Yolymatics Research Library

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>📖 Academic Research Library</h1>
+            <h1>📖 Yolymatics Research Library</h1>
             <p class="subtitle">Track your reading materials across Philosophy, Religion, Mathematics, Science, and Cosmology</p>
         </header>
 
